yaml-examples/searx/searx-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: searx
  namespace: default
  labels:
    app: searx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searx
  template:
    metadata:
      labels:
        app: searx
    spec:

      containers:
      - name: searx
        image: searx/searx
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /etc/searx
            name: config
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: searx
