yaml-examples/searx/searx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searx
  namespace: default
spec:
  selector:
    app: searx
  ports:
  - port: 8080
    targetPort: 8080
